--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
+
     <string name="app_name">PopularMovies</string>
+    <string name="popular">Popular</string>
+    <string name="top_rated">Top Rated</string>
+
 </resources>
