changed trailer view to horizontal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="app_name">PopularMovies</string>
     <string name="popular">Popular</string>
     <string name="top_rated">Top Rated</string>
+    <string name="reviewsTv">Reviews</string>
+    <string name="trailers">Trailers</string>
 
 </resources>
