created layouts for favorites and added to menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-
     <string name="app_name">PopularMovies</string>
     <string name="popular">Popular</string>
     <string name="top_rated">Top Rated</string>
+    <string name="favorites">Favorites</string>
     <string name="reviewsTv">Reviews</string>
     <string name="trailers">Trailers</string>
 
+    <string name="content_authority">com.sukhjinder.popularmovies.app</string>
 </resources>
